--- a/data/Publication/fund-dc2.yml
+++ b/data/Publication/fund-dc2.yml
@@ -1,7 +1,7 @@
 bibtype: Fund
-author: 研究代表者
-title: ソーシャルメディアからの言語横断的な話題抽出に関する研究
-booktitle: 日本学術振興会科学研究費補助金 特別研究員奨励費 , 1300千円 , April 2016 - March 2018 (expected)
+author: Project Director
+title: Research on Multilingual Trend Extraction from Social Media
+booktitle: 	Grant-in-Aid for JSPS Fellows , 1,300,000 YEN , April 2016 - March 2018 (expected)
 volume: null
 number: null
 pages: null
