--- a/data/Publication/fund-hwip2015.yml
+++ b/data/Publication/fund-hwip2015.yml
@@ -1,7 +1,7 @@
 bibtype: Fund
-author: 研究代表者
-title: グループ意思決定を支援するリーダー型人工エージェントシステムの構築
-booktitle: 大阪大学博士課程教育リーディングプログラムにおける独創的な教育研究活動経費 , 860千円 , April 2015 - March 2015
+author: Project Director
+title: Development of an Artificial Agent for Leading Group Decision Making
+booktitle: Expense for Original Education Research Activity on Program for Leading Graduate Schools, Osaka University , 860,000 YEN , April 2015 - March 2016
 volume: null
 number: null
 pages: null
