--- a/data/Publication/fund-hwip2016-tominaga.yml
+++ b/data/Publication/fund-hwip2016-tominaga.yml
@@ -1,7 +1,7 @@
 bibtype: Fund
-author: グループ構成員
-title: 協調Web検索を伴う意思決定における説得力を持つ情報推薦アルゴリズム
-booktitle: 大阪大学博士課程教育リーディングプログラムにおける独創的な教育研究活動経費 , 830千円 , April 2016 - March 2016
+author: Project Member
+title: Persuasive Recommendation in Group Decision Making with Collaborative Web Search
+booktitle: Expense for Original Education Research Activity on Program for Leading Graduate Schools, Osaka University , 830,000 YEN , April 2016 - March 2017
 volume: null
 number: null
 pages: null
