--- a/data/Publication/fund-dc2.yml
+++ b/data/Publication/fund-dc2.yml
@@ -1,7 +1,7 @@
 bibtype: Fund
 author: Project Director
-title: Research on Multilingual Trend Extraction from Social Media
-booktitle: 	Grant-in-Aid for JSPS Fellows , 1,300,000 YEN , April 2016 - March 2018 (expected)
+title: Research on Multi-lingual Trend Extraction from Social media
+booktitle: Grant-in-Aid for JSPS Fellows , 1,300,000 YEN , April 2016 - March 2018 (expected)
 volume: null
 number: null
 pages: null
