--- a/data/Publication/award-dbs2014.yml
+++ b/data/Publication/award-dbs2014.yml
@@ -1,7 +1,7 @@
 bibtype: Award
-author: 中村達哉
-title: 学生奨励賞
-booktitle: 第160回データベースシステム研究会
+author: Tatsuya Nakamura
+title: Student Incentive Award
+booktitle: The 160th IPSJ SIG on Database System
 volume: null
 number: null
 pages: null
