--- a/data/Publication/award-ieice2011.yml
+++ b/data/Publication/award-ieice2011.yml
@@ -1,7 +1,7 @@
 bibtype: Award
-author: 中村達哉
-title: 成績優秀賞
-booktitle: 電子情報通信学会九州支部
+author: Tatsuya Nakamura
+title: Outstanding Performance Award
+booktitle: IEICE Kyushu Section
 volume: null
 number: null
 pages: null
