--- a/data/Publication/award-procon2010.yml
+++ b/data/Publication/award-procon2010.yml
@@ -1,7 +1,7 @@
 bibtype: Award
-author: 中村達哉, Altansargai Buyandalai, 糸永恭平 and 内山良一
-title: 敢闘賞
-booktitle: 全国高等専門学校 第21回プログラミングコンテスト
+author: Tatsuya Nakamura, Altansargai Buyandalai, Kyohei Itonaga and Yoshikazu Uchiyama
+title: Fighting-spirit Award
+booktitle: The 21th Programming Contest for National Institutes of Technology
 volume: null
 number: null
 pages: null
