--- a/data/Publication/award-webdbf2015.yml
+++ b/data/Publication/award-webdbf2015.yml
@@ -1,7 +1,7 @@
 bibtype: Award
-author: 中村達哉
-title: 学生奨励賞
-booktitle: 第8回Webとデータベースに関するフォーラム (WebDB Forum 2015)
+author: Tatsuya Nakamura
+title: Student Incentive Award
+booktitle: The 8th Forum on Web and Database (WebDB Forum 2015)
 volume: null
 number: null
 pages: null
