--- a/data/Publication/intl-wi2017.yml
+++ b/data/Publication/intl-wi2017.yml
@@ -4,8 +4,8 @@ title: Investigation on Dynamics of Group Decision Making with Collaborative Web
 booktitle: IEEE/WIC/ACM Int'l Conf. on Web Intelligence (WI)
 volume: null
 number: null
-pages: null
-published: false
+pages: 434-441
+published: true
 published-date: 2017-08-23
 venue: Leipniz, German
-note: null
+note: "Acceptance Rate: 66.3%"
