--- a/data/Publication/intl-wi2017.yml
+++ b/data/Publication/intl-wi2017.yml
@@ -7,5 +7,5 @@ number: null
 pages: 434-441
 published: true
 published-date: 2017-08-23
-venue: Leipniz, German
+venue: Leipzig , German
 note: "Acceptance Rate: 66.3%"
