Change data schema and update pubs

--- a/views/home.yml
+++ b/views/home.yml
@@ -4,9 +4,9 @@ context:
   dynamic:
     educations: session.query(Education).order_by(Education.fromdate.desc()).all()
     experiences: session.query(Experience).order_by(Experience.fromdate.desc()).all()
-    journals: session.query(Publication).filter(Publication.bibtype=='Journal').order_by(Publication.published_date.desc()).all()
-    intlconf: session.query(Publication).filter(Publication.bibtype=='InternationalConference').order_by(Publication.published_date.desc()).all()
-    domconf: session.query(Publication).filter(Publication.bibtype=='DomesticConference').order_by(Publication.published_date.desc()).all()
-    awards: session.query(Publication).filter(Publication.bibtype=='Award').order_by(Publication.published_date.desc()).all()
-    funds: session.query(Publication).filter(Publication.bibtype=='Fund').order_by(Publication.published_date.desc()).all()
-    others: session.query(Publication).filter(Publication.bibtype=='Other').order_by(Publication.published_date.desc()).all()
+    journal: session.query(Journal).order_by(Journal.published_date.desc()).all()
+    intlconf: session.query(IntlConf).order_by(IntlConf.published_date.desc()).all()
+    dmsconf: session.query(DmsConf).order_by(DmsConf.published_date.desc()).all()
+    fund: session.query(Fund).order_by(Fund.period_from.desc()).all()
+    award: session.query(Award).order_by(Award.received_date.desc()).all()
+    other: session.query(Other).order_by(Other.published_date.desc()).all()
