--- a/data/Award/2011-ieice.yml
+++ b/data/Award/2011-ieice.yml
@@ -1,4 +1,4 @@
-recipient: Tatsuya Nakamura
+recipient: <b>Tatsuya Nakamura</b>
 title: Outstanding Performance Award
 organization: IEICE Kyushu Section
 received-date: 2011-03-17
