--- a/data/Award/2014-dbs.yml
+++ b/data/Award/2014-dbs.yml
@@ -1,4 +1,4 @@
-recipient: Tatsuya Nakamura
+recipient: <b>Tatsuya Nakamura</b>
 title: Student Incentive Award
 organization: The 160th IPSJ SIG on Database System
 received-date: 2014-11-01
