--- a/data/Award/2015-webdbf.yml
+++ b/data/Award/2015-webdbf.yml
@@ -1,4 +1,4 @@
-recipient: Tatsuya Nakamura
+recipient: <b>Tatsuya Nakamura</b>
 title: Student Incentive Award
 organization: The 8th Forum on Web and Database (WebDB Forum 2015)
 received-date: 2015-11-17
