--- a/data/Award/2017-dbws.yml
+++ b/data/Award/2017-dbws.yml
@@ -1,4 +1,4 @@
-recipient: Tatsuya Nakamura
+recipient: <b>Tatsuya Nakamura</b>
 title: Student Incentive Award
 organization: Kansai Database Workshop 2017
 received-date: 2017-09-24
