--- a/data/DmsConf/2011-mi.yml
+++ b/data/DmsConf/2011-mi.yml
@@ -1,4 +1,4 @@
-author: 中村達哉, 内山良一, 原 武史 and 藤田広志
+author: <b>中村達哉</b>, 内山良一, 原 武史 and 藤田広志
 title: ヘシアンフィルタバンクを用いた胸部X線写真における結節状陰影の検出
 conference: 医用画像研究会
 published-date: 2011-01-01
