--- a/data/DmsConf/2014-dbs.yml
+++ b/data/DmsConf/2014-dbs.yml
@@ -1,4 +1,4 @@
-author: 中村達哉, 白川真澄, 原 隆浩 and 西尾章治郎
+author: <b>中村達哉</b>, 白川真澄, 原 隆浩 and 西尾章治郎
 title: Wikipediaを用いたソーシャルメディアからの言語横断的な話題抽出システムの試作
 conference: 第160回データベースシステム研究会
 published-date: 2014-11-01
