--- a/data/IntlConf/2014-wi.yml
+++ b/data/IntlConf/2014-wi.yml
@@ -1,4 +1,4 @@
-author: Tatsuya Nakamura, Masumi Shirakawa, Takahiro Hara and Shojiro Nishio
+author: <b>Tatsuya Nakamura</b>, Masumi Shirakawa, Takahiro Hara and Shojiro Nishio
 title: Semantic Similarity Measurements for Multi-Lingual Short Texts Using Wikipedia
 conference: IEEE/WIC/ACM International Conference on Web Intelligence (WI)
 published-date: 2014-08-11
