--- a/data/IntlConf/2017-wi.yml
+++ b/data/IntlConf/2017-wi.yml
@@ -1,4 +1,4 @@
-author: Tatsuya Nakamura, Tomu Tominaga, Miki Watanabe, Nattapong Thammasan, Kenji Urai, Yutaka Nakamura, Kazuhumi Hosoda, Takahiro Hara and Yoshinori Hijikata
+author: <b>Tatsuya Nakamura</b>, Tomu Tominaga, Miki Watanabe, Nattapong Thammasan, Kenji Urai, Yutaka Nakamura, Kazuhumi Hosoda, Takahiro Hara and Yoshinori Hijikata
 title: Investigation on Dynamics of Group Decision Making with Collaborative Web Search
 conference: IEEE/WIC/ACM International Conference on Web Intelligence (WI)
 published-date: 2017-08-23
