--- a/data/Award/2010-procon.yml
+++ b/data/Award/2010-procon.yml
@@ -1,4 +1,4 @@
-recipient: Tatsuya Nakamura, Altansargai Buyandalai, Kyohei Itonaga and Yoshikazu Uchiyama
+recipient: <b>Tatsuya Nakamura</b>, Altansargai Buyandalai, Kyohei Itonaga and Yoshikazu Uchiyama
 title: Fighting-spirit Award
 organization: The 21th Programming Contest for National Institutes of Technology
 received-date: 2010-10-17
