--- a/data/DmsConf/2013-soc.yml
+++ b/data/DmsConf/2013-soc.yml
@@ -1,4 +1,4 @@
-author: 中村達哉, 白川真澄, 原 隆浩 and 西尾章治郎
+author: <b>中村達哉</b>, 白川真澄, 原 隆浩 and 西尾章治郎
 title: Wikipediaの記事を素性としたベクトルによる短文間の言語非依存な関連度計算手法
 conference: 第4回ソーシャルコンピューティングシンポジウム (SoC)
 published-date: 2013-06-01
