--- a/data/DmsConf/2015-deim.yml
+++ b/data/DmsConf/2015-deim.yml
@@ -1,4 +1,4 @@
-author: 中村達哉, 白川真澄, 原 隆浩 and 西尾章治郎
+author: <b>中村達哉</b>, 白川真澄, 原 隆浩 and 西尾章治郎
 title: ソーシャルメディアからの言語横断的な話題抽出に向けたエンティティリンキング手法
 conference: 第7回データ工学と情報マネジメントに関するフォーラム (DEIM)
 published-date: 2015-03-01
