--- a/data/DmsConf/2015-webdbf.yml
+++ b/data/DmsConf/2015-webdbf.yml
@@ -1,4 +1,4 @@
-author: 中村達哉, 白川真澄, 原 隆浩 and 西尾章治郎
+author: <b>中村達哉</b>, 白川真澄, 原 隆浩 and 西尾章治郎
 title: Wikipediaのページビュー数を用いたTwitter上の話題語に対するエンティティリンキング
 conference: 第8回Webとデータベースに関するフォーラム (WebDB Forum)
 published-date: 2015-11-17
