--- a/data/DmsConf/2016-deim-dorapro.yml
+++ b/data/DmsConf/2016-deim-dorapro.yml
@@ -1,4 +1,4 @@
-author: 中村達哉, 渡辺美紀, Nattapong Thammasan, 浦井健次, 冨永登夢, 中村 泰, 細田一史 and 原 隆浩
+author: <b>中村達哉</b>, 渡辺美紀, Nattapong Thammasan, 浦井健次, 冨永登夢, 中村 泰, 細田一史 and 原 隆浩
 title: 協調Web検索におけるグループ意思決定ダイナミクスの調査
 conference: 第8回データ工学と情報マネジメントに関するフォーラム (DEIM)
 published-date: 2016-02-01
