--- a/data/DmsConf/2016-deim-matsuoka.yml
+++ b/data/DmsConf/2016-deim-matsuoka.yml
@@ -1,4 +1,4 @@
-author: 松岡紀行, 中村達哉, 白川真澄, 原 隆浩 and 西尾章治郎
+author: 松岡紀行, <b>中村達哉</b>, 白川真澄, 原 隆浩 and 西尾章治郎
 title: Twitterユーザの関心の表現に適したデータ構造の検証
 conference: 第8回データ工学と情報マネジメントに関するフォーラム (DEIM)
 published-date: 2016-02-01
