--- a/data/Experience/hwip.yml
+++ b/data/Experience/hwip.yml
@@ -1,6 +1,6 @@
 place: Osaka University Humanware Innovation Program
 title: Program Student
 fromdate: 2013-04-01
-todate: null
+todate: 2019-03-25
 desc: "Stipend Recipient : 2013/04 - 2016/03"
 
