--- a/data/Education/doctor.yml
+++ b/data/Education/doctor.yml
@@ -1,7 +1,7 @@
-degree: Ph.D. course in Information Science
+degree: Ph.D. in Information Science
 institute: Grad. School of Information Science and Technology, Osaka University, Japan
 type: Thesis
-title: null
+title: Research on Cross-lingual Analysis of Social Media using Wikipedia
 supervisor:  <a href="http://www-mmde.ist.osaka-u.ac.jp/">Takahiro HARA</a>
 fromdate: 2015-04-01
-todate: null
+todate: 2019-03-25
