--- a/data/Experience/dc2.yml
+++ b/data/Experience/dc2.yml
@@ -1,6 +1,6 @@
 place: JSPS Research Fellowship
-title: Young Scientists (DC2)
+title: Young Scientist (DC2)
 fromdate: 2016-04-01
-todate: null
-desc: "Theme: Reseach on Multi-lingual Trend Extraction from Social Media"
+todate: 2018-03-31
+desc: "Theme: Reseach on Multilingual Trend Extraction from Social Media"
 
